--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="retro Instagram clone">
     <title>Instagram</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -86,6 +86,41 @@
         </main>
 
         <aside class="sidebar">
+            <div class="sidebar-profile">
+                <img src="./images/profile-pic-main.jpg" alt="Your profile picture" class="main-profile-pic">
+                <div class="profile-text">
+                    <strong>ekelenna1</strong>
+                    <span>Kelenna</span>
+                </div>
+            </div>
+
+            <div class="stories-container">
+                <div class="stories-header">
+                    <span>Stories</span>
+                    <a href="#">Watch All</a>
+                </div>
+                <ul class="story-list">
+                    <li class="story-item">
+                        <img src="./images/profile-pic-3.jpg" alt="Story profile picture">
+                        <div>
+                            <strong>chopped.chin</strong>
+                            <span>16 MINUTES AGO</span>
+                        </div>
+                    </li>
+                    <li class="story-item">
+                        <img src="./images/profile-pic-4.jpg" alt="Story profile picture">
+                        <div>
+                            <strong>scp067</strong>
+                            <span>2 HOURS AGO</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <footer class="sidebar-footer">
+                <p>About · Help · Press · API · Jobs · Privacy · Terms</p>
+                <p>© 2017 INSTAGRAM</p>
+            </footer>
         </aside>
     </div>
 
