testing updated suggestion box and sidebar

--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
                 <input type="text" placeholder="Search">
             </div>
             <nav class="nav-icons">
-                <i class="bi bi-house-door"></i>
-                <i class="bi bi-send"></i>
                 <i class="bi bi-compass"></i>
                 <i class="bi bi-heart"></i>
                 <i class="bi bi-person"></i>
@@ -83,11 +81,40 @@
                     <p class="add-comment">Add a comment...</p>
                 </div>
             </article>
+            <section class="suggestions">
+                <div class="suggestions-header">
+                    <p>Suggestions For You</p>
+                    <a href="#">See All</a>
+                </div>
+                <div class="suggestion-cards">
+                    <div class="suggestion-card">
+                        <i class="bi bi-x suggestion-close"></i>
+                        <img src="./images/profile-pic-5.jpg" alt="Suggested profile">
+                        <p class="username"><strong>d.negr</strong> <i class="bi bi-patch-check-fill verified"></i></p>
+                        <p class="subtext">Popular</p>
+                        <button class="follow-button" type="button">Follow</button>
+                    </div>
+                    <div class="suggestion-card">
+                        <i class="bi bi-x suggestion-close"></i>
+                        <img src="./images/profile-pic-6.jpg" alt="Suggested profile">
+                        <p class="username"><strong>supermouth</strong> </p>
+                        <p class="subtext">Followed by tungtung</p>
+                        <button class="follow-button" type="button">Follow</button>
+                    </div>
+                    <div class="suggestion-card">
+                        <i class="bi bi-x suggestion-close"></i>
+                        <img src="./images/profile-pic-7.jpg" alt="Suggested profile">
+                        <p class="username"><strong>bronbron</strong> </p>
+                        <p class="subtext">Followed by dabigdrop</p>
+                        <button class="follow-button" type="button">Follow</button>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <aside class="sidebar">
             <div class="sidebar-profile">
-                <img src="./images/profile-pic-main.jpg" alt="Your profile picture" class="main-profile-pic">
+                <img src="./images/profile-pic-main.jpg" alt="profile picture" class="main-profile-pic">
                 <div class="profile-text">
                     <strong>ekelenna1</strong>
                     <span>Kelenna</span>
@@ -112,6 +139,20 @@
                         <div>
                             <strong>scp067</strong>
                             <span>2 HOURS AGO</span>
+                        </div>
+                    </li>
+                    <li class="story-item">
+                        <img src="./images/profile-pic-3.jpg" alt="Story profile picture">
+                        <div>
+                            <strong>chopped.chin2</strong>
+                            <span>3 HOURS AGO</span>
+                        </div>
+                    </li>
+                    <li class="story-item">
+                        <img src="./images/profile-pic-4.jpg" alt="Story profile picture">
+                        <div>
+                            <strong>scp069</strong>
+                            <span>8 HOURS AGO</span>
                         </div>
                     </li>
                 </ul>
