--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <header class="main-header">
         <div class="header-content">
             <div class="logo-container">
-                <img src="./images/instagram.png" alt="Instagram logo">
+                <i class="bi bi-instagram"></i>
+                <div class="logo-divider"></div>
+                <img src="./images/instagram.png" alt="Instagram logo text">
             </div>
             <div class="search-container">
-                <input type="text" placeholder="Search">
+                <input type="text" placeholder="🔍Search">
             </div>
             <nav class="nav-icons">
                 <i class="bi bi-compass"></i>
@@ -105,7 +107,7 @@
                         <i class="bi bi-x suggestion-close"></i>
                         <img src="./images/profile-pic-7.jpg" alt="Suggested profile">
                         <p class="username"><strong>bronbron</strong> </p>
-                        <p class="subtext">Followed by dabigdrop</p>
+                        <p class="subtext">Followed by bigdrop</p>
                         <button class="follow-button" type="button">Follow</button>
                     </div>
                 </div>
@@ -117,7 +119,7 @@
                 <img src="./images/profile-pic-main.jpg" alt="profile picture" class="main-profile-pic">
                 <div class="profile-text">
                     <strong>ekelenna1</strong>
-                    <span>Kelenna</span>
+                    <span>Kelenna EO</span>
                 </div>
             </div>
 
@@ -128,30 +130,56 @@
                 </div>
                 <ul class="story-list">
                     <li class="story-item">
+                        <div class="story-av">
                         <img src="./images/profile-pic-3.jpg" alt="Story profile picture">
+                        </div>
                         <div>
                             <strong>chopped.chin</strong>
                             <span>16 MINUTES AGO</span>
                         </div>
                     </li>
                     <li class="story-item">
+                        <div class="story-av">
+                        <img src="./images/profile-pic-8.jpg" alt="Story profile picture">
+                        </div>
+                        <div>
+                            <strong>bronnyjr</strong>
+                            <span>41 MINUTES AGO</span>
+                        </div>
+                    </li>
+                    <li class="story-item">
+                        <div class="story-av">
                         <img src="./images/profile-pic-4.jpg" alt="Story profile picture">
+                        </div>
                         <div>
                             <strong>scp067</strong>
                             <span>2 HOURS AGO</span>
                         </div>
                     </li>
                     <li class="story-item">
-                        <img src="./images/profile-pic-3.jpg" alt="Story profile picture">
+                        <div class="story-av">
+                        <img src="./images/profile-pic-9.jpg" alt="Story profile picture">
+                        </div>
                         <div>
                             <strong>chopped.chin2</strong>
                             <span>3 HOURS AGO</span>
                         </div>
                     </li>
                     <li class="story-item">
-                        <img src="./images/profile-pic-4.jpg" alt="Story profile picture">
+                        <div class="story-av">
+                        <img src="./images/profile-pic-10.jpg" alt="Story profile picture">
+                        </div>
                         <div>
                             <strong>scp069</strong>
+                            <span>8 HOURS AGO</span>
+                        </div>
+                    </li>
+                    <li class="story-item">
+                        <div class="story-av">
+                        <img src="./images/profile-pic-1.jpg" alt="Story profile picture">
+                        </div>
+                        <div>
+                            <strong>scp041</strong>
                             <span>8 HOURS AGO</span>
                         </div>
                     </li>
